--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -23,7 +23,23 @@ p {
   font-size: 14px;
 }
 
-.background {
+li {
+  font-size: 18pc;
+  text-decoration: underline;
+}
+
+.white-font {
   color: white;
+}
+
+.background {
   background-image: url('.resources/images/the-flatiron-building.png');
+}
+
+.footer {
+  background-color: dimgray;
+}
+
+.copyright {
+  font-size: 11px;
 }
