--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,6 +1,7 @@
 body {
   text-align: center;
   font-family: Helvetica, Arial, sans-serif;
+  color: black;
 }
 
 h1 {
@@ -33,7 +34,7 @@ li {
 }
 
 .background {
-  background-image: url('.resources/images/the-flatiron-building.png');
+  background-image: url('/resources/images/the-flatiron-building.png');
 }
 
 .footer {
