--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,7 +1,6 @@
 body {
   text-align: center;
   font-family: Helvetica, Arial, sans-serif;
-  color: black;
 }
 
 h1 {
@@ -34,7 +33,7 @@ li {
 }
 
 .background {
-  background-image: url('/resources/images/the-flatiron-building.png');
+  background-image: url('./resources/images/the-flatiron-building.png');
 }
 
 .footer {
